# A-Priori

./: .gitignore  README.md  benchmark_baseline_run.json  pipeline.gates.yaml  pyproject.toml  spike_tree_sitter.py
.github/workflows/: ci.yml
docs/: a-priori-epics.md  a-priori-erd.md  a-priori-prd.md  a-priori-stories.md  architecture.md  audit-ui.md  check_agents.txt  configuration.md  consistency-audit-2026-04-04.md  cross-document-consistency-review.md  mcp-tools.md  model-quality.md  pipeline-fix-briefing.md
docs/agent-prompts/: code-review-agent.md  dispatcher-agent.md  escalation-recovery-agent.md  gate-architecture-agent.md  gate-epic-review-agent.md  gate-integration-agent.md  gate-quality-agent.md  implementation-agent.md  merge-agent.md
docs/board-snapshots/: epic-progression-v1.md  epic-progression-v2.md  moltiply-pipeline-reference.md  story-execution-v1.md  story-execution-v2.md
docs/spikes/: README.md  S-1-async-architecture.md  S-2-embedding-strategy.md  S-3-tree-sitter-grammar-quality.md  S-4-blast-radius-validation.md  S-6-mcp-python-sdk.md  S-8-co-regulation-prompt-design.md
src/apriori/: config.py
tests/: conftest.py  test_config.py
tests/adapters/: test_adapter_suite.py  test_anthropic.py  test_base.py  test_ollama.py
tests/api/: test_review_actions.py
tests/embedding/: test_embedding_service.py
tests/knowledge/: test_impact.py  test_integrator.py  test_reviewer.py  test_staleness.py
tests/librarian/: test_budget.py  test_loop.py  test_prompt_templates.py  test_reference_resolver.py
tests/maintenance/: test_impact_profiles.py
tests/mcp/: test_blast_radius_tool.py  test_read_tools.py  test_server.py  test_write_tools.py
tests/models/: test_co_regulation_assessment.py  test_concept.py  test_edge.py  test_impact.py  test_review_outcome.py  test_review_outcome_new_fields.py  test_work_item.py
tests/quality/: test_failure_management.py  test_level1.py  test_level15.py  test_librarian_output_fixtures.py  test_metrics.py  test_modulation.py  test_priority.py  test_progressive_enrichment.py
tests/references/: test_resolver.py
tests/retrieval/: test_blast_radius_query.py  test_historical_impact.py  test_structural_impact.py
(+112 files in other folders)
