[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apriori"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sentence-transformers>=3.0",
    "anthropic>=0.40.0",
    "sqlite-vec>=0.1.0",
    "mcp>=1.26,<2.0",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.21",
    "tree-sitter-typescript>=0.21",
    "pathspec>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[project.scripts]
apriori = "apriori.shells.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/apriori"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
